[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['titanfp', 'titanfp.titanic', 'titanfp.fpbench', 'titanfp.arithmetic']

[project]
name = "titanfp"
version = "0.0.1"
description = "number systems research with FPBench, including implementation of posits"
authors = [
    { name = "Bill Zorn", email = "billzorn@cs.washington.edu" },
    { name = "Brett Saiki", email = "bsaiki@cs.washington.edu" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy>=1.23.0",
    "gmpy2>=2.1.2",
    "antlr4-python3-runtime~=4.9.3"
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/billzorn/titanic"
Issues = "https://github.com/billzorn/titanic/issues"
